[package]
name = "pyreunion"
version = "0.1.2"
edition = "2018"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "A Python API for the Rust backend of `reunion`, i.e. a Union-Find w/ Rank data structure for Python."
license-file = "LICENSE"
documentation = "https://www.github.com/aalekhpatel07/reunion-api/blob/master/README.md"
repository = "https://www.github.com/aalekhpatel07/reunion-api"

[dependencies]
pyo3 = { version = "0.14", features=["extension-module", "hashbrown", "macros"] }
reunion = { version = "0.1" }

[lib]
crate-type = ["cdylib", "rlib"]
